--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 /* Home Page - Banner Section Styling */
 .banner {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@
 /* Home Page - Photo Gallery Divider Section Styling */
 .image-gallery-divider {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 200px;
 }
 
@@ -61,6 +61,7 @@
 
 .about-section p,
 .next-event-section p {
+    margin-right: 30px;
     margin-bottom: 20px;
     line-height: 1.25;
 }
