--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,10 @@ p {
 header {
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     background: #00AFB9;
     background: linear-gradient(197deg, rgba(0, 175, 185, 1) 0%, rgba(0, 175, 185, 1) 25%, rgba(253, 252, 220, 1) 100%);
-    padding: 10px 20px;
+    padding: 10px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -154,7 +154,7 @@ header {
 
 /* Page Hero Section Banner Section Styling */
 .shortbanner {
-    width: 100vw;
+    width: 100%;
     height: 40vh;
     margin-top: 30px;
     display: flex;
